# fastapi-template

./: .env-example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  config.py  docker-compose.yml  docker-compose.yml-example  main.py  playbook.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
alembic/: env.py
ansible/: github_inventory.ini-example  gitlab_inventory.ini-example  gitlab_playbook.yml
db/: create_table.py
requirements/: dev.txt  prod.txt
src/: config.py  constans.py  constants.py  database.py  decorator.py  logger.py  main.py  models.py  schemas.py
src/auth/: constants.py  dependencies.py  router.py  schemas.py  service.py  utils.py
tests/: test_api.py
